# Rust-RabbitMQ-Example

./: Cargo.toml  README.md
src/: consumer.rs  main.rs  publisher.rs  user.rs
