[package]
name = "rust-rabbitmq-example"
version = "0.1.0"
authors = ["Gaurav Saini <gaurav.saini@zoomcar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.0"
serde = "1.0"
serde_json = "1.0"
amiquip = "0.3.3"
